fixed styles on the focus state and improved UX on mobile by increasing popup size

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
     display: flex;
     color: inherit;
     text-decoration: none;
+    margin: 0 auto;
 }
 .popup__box_item_link {
 background:var(--bg-color-nav);
@@ -56,6 +57,10 @@ color: var(--color-nav);
     -moz-appearance: none;
     appearance: none;
     position: relative;
+}
+.header__nav_box_item_popup {
+    display: flex;
+    justify-content: center;
 }
 .popup {
     display: none; 
@@ -113,7 +118,7 @@ color: var(--color-nav);
 }
 .popup_btn_label {
     text-align: center;
-    width: 100%;
+    width: 96%;
     padding: 0.3rem 0;
     background: var(--bg-color-header);
     border-radius: 0.4rem;
@@ -130,8 +135,10 @@ color: var(--color-nav);
     text-align: center;
     padding-bottom: 5px;
 }
-.header__nav_box_item:focus, 
-.header__nav_box_item:hover, 
+input[type="checkbox"].header__nav_box_item_popup:focus ~ .popup_label,
+input[type="checkbox"].header__nav_box_item_popup:hover ~ .popup_label,
+.header__nav_box_item_link:focus, 
+.header__nav_box_item_link:hover, 
 .popup__box_item_link:hover,
 .popup__box_item_link:focus, 
 .header__nav_box_item_popup:hover + .popup_label, 
@@ -150,5 +157,19 @@ color: var(--color-nav);
 @media (max-width: 425px) {
     * {
         font-size: 12px;
+    }
+    .header__nav_box_item {
+        width: 20%;
+    }
+    .header__nav_box {
+        max-width: 100%;
+    }
+    .popup {
+    left: auto;
+    width: 100vw;
+    }
+    .popup__box_item_link {
+        width: 30vw;
+        height: 5rem;
     }
 }
